--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,18 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.view.profile.ProfileActivity"
-    android:background="@color/colorBrightBlue">
+    android:background="@color/colorBrightBlue"
+    tools:context=".ui.view.profile.ProfileActivity">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <include
+        android:id="@+id/toolbar_profile"
+        layout="@layout/toolbar" />
+
+    <ImageButton
+        android:id="@+id/btn_logout"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/ic_logout"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_profile"
+        android:contentDescription="@string/title_log_out" />
+
+    <ImageView
         android:id="@+id/avatar_url"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/bear2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@tools:sample/avatars" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar_profile" />
 
     <TextView
         android:id="@+id/tv_profile_name"
@@ -24,12 +40,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
+        android:text="@string/title_hello"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/card_task"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/avatar_url"
-        tools:text="Profile Name" />
+        app:layout_constraintTop_toBottomOf="@+id/avatar_url" />
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card_task"
