--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,7 @@
         android:layout_height="75dp"
         android:layout_marginTop="16dp"
         android:contentDescription="@string/app_name"
-        android:src="@color/colorPrimary"
+        android:src="@drawable/bear"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar_register" />
