--- a/app/src/main/res/layout/fragment_activities.xml
+++ b/app/src/main/res/layout/fragment_activities.xml
@@ -1,32 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.view.dashboard.ActivitiesFragment"
-    android:background="@drawable/sky_bg">
+    android:background="@drawable/sky_bg"
+    android:paddingHorizontal="16dp"
+    tools:context=".ui.view.dashboard.ActivitiesFragment">
 
     <TextView
         android:id="@+id/fragment_title"
+        style="@style/TextViewAppTitleStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
         android:text="@string/your_plans"
         android:textColor="@color/white"
-        style="@style/TextViewAppTitleStyle"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_activities_plan"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/fragment_title"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="70dp"
-        tools:listitem="@layout/item_activities_plan"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment_title"
+        tools:listitem="@layout/item_activities_plan" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
