--- a/app/src/main/res/layout/item_activities_plan.xml
+++ b/app/src/main/res/layout/item_activities_plan.xml
@@ -1,66 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view_child"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
+    android:layout_marginVertical="15dp"
     app:cardCornerRadius="30dp"
-    android:layout_marginVertical="15dp">
+    app:strokeColor="@color/colorSecondary"
+    app:strokeWidth="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingVertical="15dp"
+        android:background="@color/colorPrimary"
         android:paddingHorizontal="30dp"
-        android:background="@color/colorPrimary">
+        android:paddingVertical="15dp">
 
         <TextView
             android:id="@+id/activities_plan_title"
             style="@style/TextViewTitleStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/activities_plan_time"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="10dp"
             android:text="@string/title_activities"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/activities_plan_time" />
 
         <TextView
             android:id="@+id/activities_plan"
+            style="@style/TextViewSubtitleStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/activities_plan_title"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="5dp"
             android:text="@string/title_my_plan"
             android:textColor="@color/white"
-            style="@style/TextViewSubtitleStyle"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/activities_plan_title" />
 
         <TextView
             android:id="@+id/activities_plan_date"
+            style="@style/TextViewTitleStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/date_example"
             android:textColor="@color/white"
-            style="@style/TextViewTitleStyle"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/activities_plan_time"
+            style="@style/TextViewTitleStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/activities_plan_date"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="5dp"
             android:text="@string/time_example"
             android:textColor="@color/white"
-            style="@style/TextViewTitleStyle"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/activities_plan_date" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
